@@ -4,19 +4,24 @@ import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 
 import org.springframework.core.convert.converter.Converter;
+import org.springframework.stereotype.Component;
 
 import com.cts.tshell.bean.NeoSkill;
 import com.cts.tshell.bean.Skill;
 
-public abstract class SkillToNeoSkill implements Converter<Skill, NeoSkill> {
-
-    @Override
+@Component
+public class SkillToNeoSkill implements Converter<Skill, NeoSkill> {
+	
+	@Override
     public NeoSkill convert(Skill skill) {
+    	System.out.println("inside neoskill convertor");
     	NeoSkill neoSkill = new NeoSkill();
-      neoSkill.setId(Long.valueOf(skill.getId()));
-//        if (StringUtils.isEmpty(skill.getId())) {
-//        	neoSkill.setId(new Long(skill.getId()));
-//        }
+    	int id = skill.getId();
+    	System.out.println("1");
+//      neoSkill.setId(Long.valueOf(skill.getId()));
+        if (id != 0 ) {
+        	neoSkill.setId(new Long(skill.getId()));
+        }
         neoSkill.setDescription(skill.getDescription());
         neoSkill.setName(skill.getName());
         neoSkill.setActive(skill.getActive());
@@ -25,6 +30,7 @@ public abstract class SkillToNeoSkill implements Converter<Skill, NeoSkill> {
         neoSkill.setSearchCount(skill.getSearchCount());
         neoSkill.setTestCount(skill.getTestCount());
         neoSkill.setImage(skill.getImage());
+        System.out.println(neoSkill);
         return neoSkill;
     }
 }
